tests/baselines/reference/destructuringInVariableDeclarations4.errors.txt
destructuringInVariableDeclarations4.ts(1,7): error TS2339: Property 'toString' does not exist on type 'number'.
destructuringInVariableDeclarations4.ts(3,11): error TS2339: Property 'toFixed' does not exist on type 'number'.


==== destructuringInVariableDeclarations4.ts (2 errors) ====
    let { toString } = 1;
          ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'number'.
    {
        let { toFixed } = 1;
              ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'number'.
    }
    export {};
    